--- a/accelerate-utility.cabal
+++ b/accelerate-utility.cabal
@@ -1,6 +1,7 @@
+Cabal-Version:    2.2
 Name:             accelerate-utility
 Version:          1.0.0.1
-License:          BSD3
+License:          BSD-3-Clause
 License-File:     LICENSE
 Author:           Henning Thielemann <haskell@henning-thielemann.de>
 Maintainer:       Henning Thielemann <haskell@henning-thielemann.de>
@@ -10,8 +11,7 @@ Synopsis:         Utility functions for the Accelerate framework
 Description:
   Several utility functions on top of the Accelerate framework.
   The functions simplify working with indices and lifting and unlifting.
-Tested-With:      GHC==7.8.3
-Cabal-Version:    1.14
+Tested-With:      GHC==8.4.3
 Build-Type:       Simple
 
 Source-Repository this
@@ -25,7 +25,7 @@ Source-Repository head
 
 Library
   Build-Depends:
-    accelerate >=1.0 && <1.2,
+    accelerate >=1.0 && <1.3,
     utility-ht >=0.0.8 && <0.1,
     base >=4.5 && <5
 
